  untangling and worst-case quality improvement;

- Fully encapsulated SUNDIALS `N_Vector` object within the `SundialsNVector`
  class by removing deprecated (e.g. `HypreParVector::ToNVector`) and
  non-deprecated (e.g. `Vector::ToNVector`) functions in other classes.

- The behavior of GridFunction::GetTrueVector() has been changed to not return
  an empty true vector.


Version 4.4, released on March 21, 2022
=======================================

Linear and nonlinear solvers
----------------------------
- Added support for using the hypre library built with HIP support. Similar to
  the existing hypre + CUDA support, most of the MFEM examples and miniapps work
  transparently with hypre + HIP builds. This includes the BoomerAMG, AMS, and
  ADS solvers.

- Added a simple singleton class, Hypre, to automatically set hypre's global
  parameters, particularly GPU-relevant options. Updated parallel example codes
  and miniapps to call Hypre::Init() where appropriate.

- Added hipSPARSE support for sparse matrix-vector multiplications.

- More explicit and consistent formatting of the output of iterative solvers
  with the new IterativeSolver::PrintLevel options. See linalg/solvers.hpp.

Meshing improvements
--------------------
- New TMOP-based methods for hr-adaptivity, interface fitting, and tangential
  relaxation of high-order meshes.

- Added initial support for meshes with pyramidal elements, including several
  pyramidal meshes in the data/ directory and support for the lowest order H1,
  Nedelec, Raviart-Thomas, and L2 basis functions on pyramids.

- Added a simpler interface to access mesh face information, see FaceInformation
  and GetFaceInformation in the Mesh class.

- Added the method ParMesh::GetSerialMesh() that reconstructs a partitioned
  parallel mesh on a given single rank. Also, added the method
  ParMesh::PrintAsSerial() that saves the reconstructed serial mesh to a C++
  stream on rank 0.
